...
  <string name="stripe_link_onramp_carf_declaration_accept_button_text">Accept</string>
  <!-- Text displayed on a cancel button on the CRS CARF declaration screen -->
  <string name="stripe_link_onramp_carf_declaration_cancel_button_text">Cancel</string>
  <!-- Title of the screen responsible for accepting CRS CARF declarations -->
  <string name="stripe_link_onramp_carf_declaration_screen_title">Declarations</string>
  <!-- Title for the address field on the KYC verification screen -->
  <string name="stripe_link_onramp_kyc_verification_address_field_title">Address</string>
  <!-- Text displayed in a confirmation button when gathering kyc information -->
  <string name="stripe_link_onramp_kyc_verification_confirm_button_text">Confirm</string>
  <!-- Title for the date of birth field on the KYC verification screen -->
  <string name="stripe_link_onramp_kyc_verification_dob_field_title">Date of birth</string>
  <!-- Title for the name field on the KYC verification screen -->
  <string name="stripe_link_onramp_kyc_verification_name_field_title">Name</string>
...
  <string name="stripe_paymentsheet_close">Close</string>
  <!-- A button used to confirm selecting a saved payment method -->
  <string name="stripe_paymentsheet_confirm">Confirm</string>
  <!-- Title for prompting for a card's CVC on confirming the payment -->
  <string name="stripe_paymentsheet_confirm_your_cvc">Confirm your CVC</string>
  <!-- Text for a button that allows manual entry of an address -->
  <string name="stripe_paymentsheet_enter_address_manually">Enter address manually</string>
  <!-- Title shown above a view containing a customer's bank account that they can delete or update -->
  <string name="stripe_paymentsheet_manage_bank_account">Manage US bank account</string>
  <!-- Title shown above a view containing a customer's card payment methods that they can delete or update -->
  <string name="stripe_paymentsheet_manage_card">Manage card</string>
  <!-- Title shown above a view containing the customer's cards that they can delete or update -->
  <string name="stripe_paymentsheet_manage_cards">Manage cards</string>
...
