package com.stripe.android.paymentsheet.addresselement

import androidx.compose.animation.ExperimentalAnimationApi
import androidx.compose.ui.test.junit4.ComposeTestRule
import androidx.compose.ui.test.junit4.createComposeRule
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTextInput
import androidx.test.core.app.ApplicationProvider
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.google.common.truth.Truth.assertThat
import com.stripe.android.model.Address
import com.stripe.android.paymentsheet.addresselement.analytics.FakeAddressLauncherEventReporter
import com.stripe.android.paymentsheet.utils.ViewModelStoreTestRule
import com.stripe.android.testing.CoroutineTestRule
import com.stripe.android.testing.createComposeCleanupRule
import com.stripe.android.ui.core.elements.autocomplete.PlacesClientProxy
import com.stripe.android.ui.core.elements.autocomplete.model.FindAutocompletePredictionsResponse
import kotlinx.coroutines.test.runTest
import org.junit.Rule
import org.junit.Test
import org.junit.rules.RuleChain
import org.junit.runner.RunWith
import java.util.Locale

@ExperimentalAnimationApi
@RunWith(AndroidJUnit4::class)
class AutocompleteScreenTest {
    val composeTestRule = createComposeRule()
    private val viewModelStoreRule = ViewModelStoreTestRule()

    @get:Rule
    val rules: RuleChain = RuleChain.emptyRuleChain()
        .around(viewModelStoreRule)
        .around(createComposeCleanupRule())
        .around(composeTestRule)
        .around(CoroutineTestRule())

    @Test
    fun `On enter manually, should set result to null and force expand key to true then go back`() = runTest {
        TestAddressElementNavigator.test {
            val viewModel = createViewModel()

            composeTestRule.setContent {
                AutocompleteScreenUI(viewModel, navigator, attributionDrawable = null)
            }

            composeTestRule.waitForIdle()
            composeTestRule.onEnterAddressManually().performClick()

            val setResultCall = setResultCalls.awaitItem()

            assertThat(setResultCall.key).isEqualTo(AddressElementNavigator.AutocompleteEvent.KEY)
            assertThat(setResultCall.value).isEqualTo(
                AddressElementNavigator.AutocompleteEvent.OnEnterManually(address = null)
            )

            assertThat(onBackCalls.awaitItem()).isNotNull()
        }
    }

    @Test
    fun `On back, should set result to null if nothing was entered and go back`() = runTest {
        TestAddressElementNavigator.test {
            val viewModel = createViewModel()

            composeTestRule.setContent {
                AutocompleteScreenUI(viewModel, navigator, attributionDrawable = null)
            }

            composeTestRule.waitForIdle()
            composeTestRule.onAddressOptionsAppBar().performClick()

            val setResultCall = setResultCalls.awaitItem()

            assertThat(setResultCall.key).isEqualTo(AddressElementNavigator.AutocompleteEvent.KEY)
            assertThat(setResultCall.value).isEqualTo(
                AddressElementNavigator.AutocompleteEvent.OnBack(address = null)
            )

            assertThat(onBackCalls.awaitItem()).isNotNull()
        }
    }

    @Test
    fun `On back with query, should set result to null and go back`() = runTest {
        TestAddressElementNavigator.test {
            val viewModel = createViewModel()

            composeTestRule.setContent {
                AutocompleteScreenUI(viewModel, navigator, attributionDrawable = null)
            }

            composeTestRule.waitForIdle()
            composeTestRule.onQueryField().performTextInput("King Street")
            composeTestRule.onAddressOptionsAppBar().performClick()

            val setResultCall = setResultCalls.awaitItem()

            assertThat(setResultCall.key).isEqualTo(AddressElementNavigator.AutocompleteEvent.KEY)
            assertThat(setResultCall.value).isEqualTo(
                AddressElementNavigator.AutocompleteEvent.OnBack(address = null)
            )

            assertThat(onBackCalls.awaitItem()).isNotNull()
        }
    }

    private fun ComposeTestRule.onAddressOptionsAppBar() = onNodeWithContentDescription("Back")
    private fun ComposeTestRule.onQueryField() = onNodeWithText("Address")
    private fun ComposeTestRule.onEnterAddressManually() = onNodeWithText("Enter address manually")

    private fun createViewModel() = AutocompleteViewModel(
        placesClient = TestPlacesClientProxy(),
        application = ApplicationProvider.getApplicationContext(),
        eventReporter = FakeAddressLauncherEventReporter(),
        autocompleteArgs = AutocompleteViewModel.Args(country = "US")
    ).also { viewModelStoreRule.track(it) }

    private class TestPlacesClientProxy(
        private val findAutocompletePredictionsResponse: Result<FindAutocompletePredictionsResponse> =
            Result.failure(IllegalStateException("Failed!")),
        private val fetchPlaceResponse: Result<Address> =
            Result.failure(IllegalStateException("Failed!")),
    ) : PlacesClientProxy {
        override fun resetSession() = Unit

        override suspend fun findAutocompletePredictions(
            query: String?,
            country: String,
            limit: Int
        ): Result<FindAutocompletePredictionsResponse> = findAutocompletePredictionsResponse

        override suspend fun fetchPlace(
            placeId: String,
            locale: Locale,
        ): Result<Address> = fetchPlaceResponse
    }
}
